--- a/Webscrap Skillsfuture.ipynb
+++ b/Webscrap Skillsfuture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "cf9ad95d",
    "metadata": {
     "scrolled": true
@@ -12,70 +12,104 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\lib\\site-packages (2.28.1)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\programdata\\anaconda3\\lib\\site-packages (4.11.1)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests) (1.26.11)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\royle\\appdata\\roaming\\python\\python39\\site-packages (from requests) (2.10)\n",
-      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests) (2.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests) (2022.9.14)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from beautifulsoup4) (2.3.1)\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting requests-html\n",
-      "  Downloading requests_html-0.10.0-py3-none-any.whl (13 kB)\n",
-      "Collecting pyppeteer>=0.0.14\n",
-      "  Downloading pyppeteer-1.0.2-py3-none-any.whl (83 kB)\n",
-      "     ---------------------------------------- 83.4/83.4 kB 4.6 MB/s eta 0:00:00\n",
-      "Collecting bs4\n",
-      "  Downloading bs4-0.0.1.tar.gz (1.1 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Collecting parse\n",
-      "  Downloading parse-1.19.1-py2.py3-none-any.whl (18 kB)\n",
-      "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\lib\\site-packages (from requests-html) (2.28.1)\n",
-      "Requirement already satisfied: w3lib in c:\\programdata\\anaconda3\\lib\\site-packages (from requests-html) (1.21.0)\n",
-      "Collecting pyquery\n",
-      "  Downloading pyquery-2.0.0-py3-none-any.whl (22 kB)\n",
-      "Collecting fake-useragent\n",
-      "  Downloading fake_useragent-1.2.1-py3-none-any.whl (14 kB)\n",
-      "Requirement already satisfied: urllib3<2.0.0,>=1.25.8 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyppeteer>=0.0.14->requests-html) (1.26.11)\n",
-      "Collecting websockets<11.0,>=10.0\n",
-      "  Downloading websockets-10.4-cp39-cp39-win_amd64.whl (101 kB)\n",
-      "     ---------------------------------------- 101.4/101.4 kB ? eta 0:00:00\n",
-      "Requirement already satisfied: importlib-metadata>=1.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyppeteer>=0.0.14->requests-html) (4.11.3)\n",
-      "Collecting pyee<9.0.0,>=8.1.0\n",
-      "  Downloading pyee-8.2.2-py2.py3-none-any.whl (12 kB)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.42.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyppeteer>=0.0.14->requests-html) (4.64.1)\n",
-      "Requirement already satisfied: certifi>=2021 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyppeteer>=0.0.14->requests-html) (2022.9.14)\n",
-      "Requirement already satisfied: appdirs<2.0.0,>=1.4.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyppeteer>=0.0.14->requests-html) (1.4.4)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\programdata\\anaconda3\\lib\\site-packages (from bs4->requests-html) (4.11.1)\n",
-      "Collecting importlib-resources>=5.0\n",
-      "  Downloading importlib_resources-6.0.0-py3-none-any.whl (31 kB)\n",
-      "Requirement already satisfied: lxml>=2.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pyquery->requests-html) (4.9.1)\n",
-      "Collecting cssselect>=1.2.0\n",
-      "  Downloading cssselect-1.2.0-py2.py3-none-any.whl (18 kB)\n",
-      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->requests-html) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\royle\\appdata\\roaming\\python\\python39\\site-packages (from requests->requests-html) (2.10)\n",
-      "Requirement already satisfied: six>=1.4.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from w3lib->requests-html) (1.16.0)\n",
-      "Requirement already satisfied: zipp>=0.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from importlib-metadata>=1.4->pyppeteer>=0.0.14->requests-html) (3.8.0)\n",
-      "Requirement already satisfied: colorama in c:\\programdata\\anaconda3\\lib\\site-packages (from tqdm<5.0.0,>=4.42.1->pyppeteer>=0.0.14->requests-html) (0.4.5)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4->requests-html) (2.3.1)\n",
-      "Building wheels for collected packages: bs4\n",
-      "  Building wheel for bs4 (setup.py): started\n",
-      "  Building wheel for bs4 (setup.py): finished with status 'done'\n",
-      "  Created wheel for bs4: filename=bs4-0.0.1-py3-none-any.whl size=1257 sha256=d11189159c3cc9cfb81e960d22fa76b7a7f7f7eea2fb6c24d3b2a7c791752bf4\n",
-      "  Stored in directory: c:\\users\\royle\\appdata\\local\\pip\\cache\\wheels\\73\\2b\\cb\\099980278a0c9a3e57ff1a89875ec07bfa0b6fcbebb9a8cad3\n",
-      "Successfully built bs4\n",
-      "Installing collected packages: pyee, parse, websockets, importlib-resources, cssselect, pyquery, pyppeteer, fake-useragent, bs4, requests-html\n",
-      "Successfully installed bs4-0.0.1 cssselect-1.2.0 fake-useragent-1.2.1 importlib-resources-6.0.0 parse-1.19.1 pyee-8.2.2 pyppeteer-1.0.2 pyquery-2.0.0 requests-html-0.10.0 websockets-10.4\n"
+      "Collecting requests\n",
+      "  Downloading requests-2.31.0-py3-none-any.whl (62 kB)\n",
+      "     ---------------------------------------- 0.0/62.6 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 62.6/62.6 kB 3.5 MB/s eta 0:00:00\n",
+      "Collecting beautifulsoup4\n",
+      "  Downloading beautifulsoup4-4.12.2-py3-none-any.whl (142 kB)\n",
+      "     ---------------------------------------- 0.0/143.0 kB ? eta -:--:--\n",
+      "     -------------------------------------- 143.0/143.0 kB 8.3 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests) (1.26.15)\n",
+      "Collecting charset-normalizer<4,>=2\n",
+      "  Downloading charset_normalizer-3.2.0-cp310-cp310-win_amd64.whl (96 kB)\n",
+      "     ---------------------------------------- 0.0/96.9 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 96.9/96.9 kB ? eta 0:00:00\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests) (2022.12.7)\n",
+      "Collecting soupsieve>1.2\n",
+      "  Downloading soupsieve-2.4.1-py3-none-any.whl (36 kB)\n",
+      "Installing collected packages: soupsieve, charset-normalizer, requests, beautifulsoup4\n",
+      "Successfully installed beautifulsoup4-4.12.2 charset-normalizer-3.2.0 requests-2.31.0 soupsieve-2.4.1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  WARNING: The script pyppeteer-install.exe is installed in 'C:\\Users\\royle\\AppData\\Roaming\\Python\\Python39\\Scripts' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 23.2.1\n",
+      "[notice] To update, run: C:\\Users\\royle\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting requests-html\n",
+      "  Using cached requests_html-0.10.0-py3-none-any.whl (13 kB)\n",
+      "Collecting fake-useragent\n",
+      "  Using cached fake_useragent-1.2.1-py3-none-any.whl (14 kB)\n",
+      "Collecting pyppeteer>=0.0.14\n",
+      "  Using cached pyppeteer-1.0.2-py3-none-any.whl (83 kB)\n",
+      "Collecting parse\n",
+      "  Using cached parse-1.19.1-py2.py3-none-any.whl (18 kB)\n",
+      "Collecting bs4\n",
+      "  Using cached bs4-0.0.1.tar.gz (1.1 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Collecting w3lib\n",
+      "  Downloading w3lib-2.1.2-py3-none-any.whl (21 kB)\n",
+      "Requirement already satisfied: requests in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests-html) (2.31.0)\n",
+      "Collecting pyquery\n",
+      "  Using cached pyquery-2.0.0-py3-none-any.whl (22 kB)\n",
+      "Requirement already satisfied: urllib3<2.0.0,>=1.25.8 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pyppeteer>=0.0.14->requests-html) (1.26.15)\n",
+      "Requirement already satisfied: certifi>=2021 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pyppeteer>=0.0.14->requests-html) (2022.12.7)\n",
+      "Collecting importlib-metadata>=1.4\n",
+      "  Downloading importlib_metadata-6.8.0-py3-none-any.whl (22 kB)\n",
+      "Collecting tqdm<5.0.0,>=4.42.1\n",
+      "  Downloading tqdm-4.66.1-py3-none-any.whl (78 kB)\n",
+      "     ---------------------------------------- 0.0/78.3 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 78.3/78.3 kB ? eta 0:00:00\n",
+      "Collecting websockets<11.0,>=10.0\n",
+      "  Downloading websockets-10.4-cp310-cp310-win_amd64.whl (101 kB)\n",
+      "     ---------------------------------------- 0.0/101.4 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 101.4/101.4 kB ? eta 0:00:00\n",
+      "Collecting pyee<9.0.0,>=8.1.0\n",
+      "  Using cached pyee-8.2.2-py2.py3-none-any.whl (12 kB)\n",
+      "Collecting appdirs<2.0.0,>=1.4.3\n",
+      "  Downloading appdirs-1.4.4-py2.py3-none-any.whl (9.6 kB)\n",
+      "Requirement already satisfied: beautifulsoup4 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from bs4->requests-html) (4.12.2)\n",
+      "Collecting lxml>=2.1\n",
+      "  Downloading lxml-4.9.3-cp310-cp310-win_amd64.whl (3.8 MB)\n",
+      "     ---------------------------------------- 0.0/3.8 MB ? eta -:--:--\n",
+      "     --------- ------------------------------ 0.9/3.8 MB 28.7 MB/s eta 0:00:01\n",
+      "     ----------- ---------------------------- 1.0/3.8 MB 33.4 MB/s eta 0:00:01\n",
+      "     ---------------------- ----------------- 2.1/3.8 MB 22.7 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  3.7/3.8 MB 26.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 3.8/3.8 MB 24.2 MB/s eta 0:00:00\n",
+      "Collecting cssselect>=1.2.0\n",
+      "  Using cached cssselect-1.2.0-py2.py3-none-any.whl (18 kB)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests->requests-html) (3.2.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests->requests-html) (3.4)\n",
+      "Collecting zipp>=0.5\n",
+      "  Downloading zipp-3.16.2-py3-none-any.whl (7.2 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from tqdm<5.0.0,>=4.42.1->pyppeteer>=0.0.14->requests-html) (0.4.6)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\royle\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from beautifulsoup4->bs4->requests-html) (2.4.1)\n",
+      "Installing collected packages: pyee, parse, fake-useragent, appdirs, zipp, websockets, w3lib, tqdm, lxml, cssselect, pyquery, importlib-metadata, bs4, pyppeteer, requests-html\n",
+      "  Running setup.py install for bs4: started\n",
+      "  Running setup.py install for bs4: finished with status 'done'\n",
+      "Successfully installed appdirs-1.4.4 bs4-0.0.1 cssselect-1.2.0 fake-useragent-1.2.1 importlib-metadata-6.8.0 lxml-4.9.3 parse-1.19.1 pyee-8.2.2 pyppeteer-1.0.2 pyquery-2.0.0 requests-html-0.10.0 tqdm-4.66.1 w3lib-2.1.2 websockets-10.4 zipp-3.16.2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  DEPRECATION: bs4 is being installed using the legacy 'setup.py install' method, because it does not have a 'pyproject.toml' and the 'wheel' package is not installed. pip 23.1 will enforce this behaviour change. A possible replacement is to enable the '--use-pep517' option. Discussion can be found at https://github.com/pypa/pip/issues/8559\n",
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 23.2.1\n",
+      "[notice] To update, run: C:\\Users\\royle\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -4011,7 +4045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
